--- a/extensions/extensions.json
+++ b/extensions/extensions.json
@@ -96,5 +96,6 @@
   "itchio",
   "gamejolt",
   "obviousAlexC/newgroundsIO",
+  "SCsupercraft/Debugging",
   "Lily/McUtils" // McUtils should always be the last item.
 ]
